<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Notifications -->
    <string name="notifications_setting_title">NOTIFICATIONS</string>
    <string name="you_have_one_message">You have one message.</string>
    <string name="notification_viewall">View all notifications</string>
    <string name="messages_viewall">View all messages</string>
    <string name="applying_changes">Applying changes</string>
    <string name="you_have_n_messages">You have %d messages.</string>
    <string name="sync_problem">Cookies cannot be synced. First run, yeah? Please just restart the app :)</string>
    <string name="notification_sound_description">Choose a ringtone or silence: \u0020</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="notifications_settings_description">Additional settings. Choose time interval, set up sounds, LED and vibration.</string>
    <string name="facebook_notifications">Facebook notifications</string>
    <string name="message_notifications">Facebook messagges</string>
    <string name="interval_pref">Time interval for checking</string>
    <string name="notification_sound">Notification sound</string>
    <string name="interval_pref_description_new">Notifications will be checked every %s.</string>
    <string name="notification_sound_msg">Message sound</string>
    <string name="vibrate">Vibrations</string>
    <string name="vibrate_double">Double vibrations</string>
    <string name="led_light">LED light</string>
    <string name="flashlight_as_led">Flashlight as LED</string>
    <string name="flashlight_as_led_summary">Use the flashlight as LED for notifications (camera led).</string>
    <string name="notifications_extra">Additional</string>
    <string name="notifications_everywhere">Always notify</string>
    <string name="notifications_everywhere_description">Also when you are on the main screen of the app.</string>
    <!-- End Notifications -->

    <!-- General -->
    <string name="general_setting_title">GENERAL</string>
    <string name="location_enabled_title">Location access</string>
    <string name="location_enabled_summary">Enable this to allow Facebook to obtain your location.</string>
    <string name="hide_editor_newsfeed_title">Hide Status editor in News Feed</string>
    <string name="hide_editor_newsfeed_summary">When enabled, the status editor will be hidden on the News Feed.</string>
    <string name="hide_editor_newsfeed_snackbar">Reload for changes to take effect</string>
    <string name="stop_images_title">Don\'t load images</string>
    <string name="stop_images_summary">When enabled, will not download images. Some images may remain in the cache.</string>
    <string name="hide_sponsored_title">Hide \'Sponsored\' Content</string>
    <string name="hide_sponsored_summary">When enabled, will hide \'Sponsored\' Content (ads) from the News Feed.</string>
    <string name="hide_birthdays_title">Hide Birthdays</string>
    <string name="hide_birthdays_summary">When enabled, will hide birthdays from the News Feed.</string>
    <string name="hide_newsfeedcontent">Hide News Feed content</string>
    <string name="hide_newsfeedcontent_summary">When enabled, will hide News Feed content.</string>
    <!-- End general -->

    <!-- About -->
    <string name="more">More and credits</string>
    <string name="about_updates">Updates</string>
    <string name="updates">Check for a new version</string>
    <string name="updates_summary">Load the page and download the latest version</string>
    <string name="people_who_translated">Users who translated the app</string>
    <string name="devs_who_helped_me">Developers who helped me asking my questions and taking code from their apps</string>
    <string name="help_translations">Help me to translate the app to your language</string>
    <string name="about_translations">Help, we need you</string>
    <string name="source_code">Source code on Github</string>
    <string name="withYou">Report bugs or requst new features</string>
    <string name="changelog">Changelog</string>
    <!-- End about -->

    <!-- Appearence -->
    <string name="appearance_setting_title">APPEARANCE</string>
    <string name="web_themes">Web themes</string>
    <string name="web_themes_summary">You can choose different web themes.</string>
    <string name="app_themes">App themes</string>
    <string name="app_themes_summary">You can choose different app themes.</string>

    <!-- Navigation -->
    <string name="navigation_setting_title">NAVIGATION</string>
    <string name="hide_menu_bar_title">Hide Menu bar</string>
    <string name="hide_menu_bar_summary">When enabled, the Facebook Menu bar will be hidden.</string>
    <string name="hide_fab_on_scroll_title">Hide Floating Action Button on scroll</string>
    <string name="hide_fab_on_scroll_summary">Hide the FAB when scrolling down.</string>
    <string name="navigation_menu_settings">Navigation menu items</string>
    <string name="navigation_menu_settings_description">You can show/hide items in the navigation menu.</string>
    <string name="save_data">Save data</string>
    <string name="save_data_summary">When enabled, the app autoconfigure to save data</string>
    <string name="orbot">Use Orbot</string>
    <string name="orbot_summary">Force all traffic to Orbot.</string>
    <string name="bottom_navigation_view">Bottom navigation view</string>
    <string name="summary_bottom_navigation_view">Configure the Bottom Navigation View.</string>
    <!-- Navigation: fab -->
    <string name="fab_text">Post a status</string>
    <string name="fab_photo">Post a photo</string>
    <string name="fab_checkin">Check In</string>
    <string name="fab_jump_top">Jump to Top</string>
    <!-- Navigation: items -->
    <string name="navigation_menu_title">NAVIGATION MENU</string>
    <string name="ic_menu_exitapp">Exit app</string>
    <string name="ic_menu_exitapp_summary">When enabled, \'Exit app\' button on navigation menu disappear.</string>
    <string name="ic_menu_fblogout">Log out</string>
    <string name="ic_menu_fblogout_summary">When enabled, \'Log out\' button on navigation menu disappear.</string>
    <string name="menu_photos">Photos</string>
    <string name="menu_photos_summary">When enabled, \'Photos\' button on navigation menu disappear.</string>
    <string name="menu_events">Events</string>
    <string name="menu_events_summary">When enabled, \'Events\' button on navigation menu disappear.</string>
    <string name="menu_back">Back</string>
    <string name="menu_back_summary">If disabled, \'Back\' button on navigation menu disappear.</string>
    <string name="menu_news">News Feed</string>
    <string name="menu_news_summary">If disabled, \'News Feed\' button on navigation menu disappear.</string>
    <string name="menu_top_stories">Top stories</string>
    <string name="menu_top_stories_summary">If disabled, \'Top stories\' button on navigation menu disappear.</string>
    <string name="menu_most_recent">Most Recent</string>
    <string name="menu_most_recent_summary">If disabled, \'Most Recent\' button on navigation menu disappear.</string>
    <string name="menu_friendreq">Friend Requests</string>
    <string name="menu_friendreq_summary">If disabled, \'Friend Requests\' button on navigation menu disappear.</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_groups_summary">If disabled, \'Groups\' button on navigation menu disappear.</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_search">Search</string>
    <string name="menu_search_summary">If disabled, \'Search\' button on navigation menu disappear.</string>
    <string name="menu_mainmenu">Main Menu</string>
    <string name="menu_mainmenu_summary">If disabled, \'Main Menu\' button on navigation menu disappear.</string>
    <string name="messaging_enabled_title">Messaging</string>
    <string name="messaging_enabled_summary">When enabled, will provide access to Facebook Messages. Disable if you have a messaging app.</string>
    <!-- End navigation -->
    <!-- BottomnavigationView -->
    <string name="bottomnavigationview_configs">BOTTOMNAVIGATIONVIEW CONFIG</string>
	<string name="shifting">Disable shifting</string>
    <string name="summary_shifting">When disabled, all items have the same size.</string>
    <string name="only_icons">Only icons</string>
    <string name="item_shifting">Show text in all items</string>
    <string name="summary_item_shifting">In selected and unselected.</string>
    <string name="only_text">Only text</string>
    <!-- End BottomNavigationView -->

    <!-- App -->
    <string name="app_name">MaterialFBook</string>
    <string name="silent">No sound</string>
    <string name="file_logger_needs_permission">No access to external storage. Log cannot be saved</string>
    <string name="facebook_app_id" translatable="false">1440102826005611</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_user">User</string>
    <string name="header_profile_pic">Profile Picture</string>
    <string name="nav_notifications">Notifications</string>
    <string name="menu_fblogin">Login to Facebook</string>
    <string name="context_save_image">Save image</string>
    <string name="settings">Settings</string>
    <string name="context_share_image">Share image</string>
    <string name="context_copy_image_link">Copy image link</string>
    <string name="context_share_link">Share link</string>
    <string name="context_copy_link">Copy link</string>
    <string name="context_share_image_progress">Sharing image…</string>
    <string name="content_copy_link_done">Link copied to clipboard</string>
    <string name="login_button">Login</string>
    <string name="share_text">Share</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="error_login">Something went wrong, please try logging in again</string>
    <string name="error_super_wrong">Something went super wrong</string>
    <string name="error_facebook_noconnection">Could not access Facebook</string>
    <string name="error_facebook_error">Something went wrong on Facebook\'s end</string>
    <string name="loading">Loading</string>
    <string name="permission_denied">Permission denied, cannot complete action</string>
    <string name="restart_needed">Restart needed</string>

</resources>
