<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/navigation_menu_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="nav_groups"
            android:summary="@string/menu_groups_summary"
            android:title="@string/menu_groups" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="nav_search"
            android:summary="@string/menu_search_summary"
            android:title="@string/menu_search" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="nav_mainmenu"
            android:summary="@string/menu_mainmenu_summary"
            android:title="@string/menu_mainmenu" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="nav_most_recent"
            android:summary="@string/menu_groups_summary"
            android:title="@string/menu_most_recent" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="nav_news"
            android:summary="@string/menu_news_summary"
            android:title="@string/menu_news" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="nav_fblogout"
            android:summary="@string/ic_menu_fblogout_summary"
            android:title="@string/ic_menu_fblogout" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="nav_exitapp"
            android:summary="@string/ic_menu_exitapp_summary"
            android:title="@string/ic_menu_exitapp" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="nav_events"
            android:summary="@string/menu_events_summary"
            android:title="@string/menu_events" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="nav_photos"
            android:summary="@string/menu_photos_summary"
            android:title="@string/menu_photos" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="messaging_enabled"
            android:summary="@string/messaging_enabled_summary"
            android:title="@string/messaging_enabled_title" />
    </PreferenceCategory>
</PreferenceScreen>