<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/content_setting_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="location_enabled"
            android:summary="@string/location_enabled_summary"
            android:title="@string/location_enabled_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="most_recent_menu"
            android:summary="@string/most_recent_menu_summary"
            android:title="@string/most_recent_menu_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="hide_editor_newsfeed"
            android:summary="@string/hide_editor_newsfeed_summary"
            android:title="@string/hide_editor_newsfeed_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="stop_images"
            android:summary="@string/stop_images_summary"
            android:title="@string/stop_images_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="hide_sponsored"
            android:summary="@string/hide_sponsored_summary"
            android:title="@string/hide_sponsored_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hide_birthdays"
            android:summary="@string/hide_birthdays_summary"
            android:title="@string/hide_birthdays_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="messenger_download"
            android:summary="@string/summary_hidemessengerdown"
            android:title="@string/title_hidemessengerdown" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/navigation_setting_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="hide_menu_bar"
            android:summary="@string/hide_menu_bar_summary"
            android:title="@string/hide_menu_bar_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hide_fab_on_scroll"
            android:summary="@string/hide_fab_on_scroll_summary"
            android:title="@string/hide_fab_on_scroll_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="messaging_enabled"
            android:summary="@string/messaging_enabled_summary"
            android:title="@string/messaging_enabled_title" />
    </PreferenceCategory>
</PreferenceScreen>