<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/bottomnavigationview_configs">
        <SwitchPreference
            android:key="shifting"
            android:defaultValue="false"
            android:title="@string/shifting"
            android:summary="@string/summary_shifting" />
        <SwitchPreference
            android:key="icons_only"
            android:defaultValue="false"
            android:title="@string/only_icons" />
        <SwitchPreference
            android:key="item_shifting"
            android:defaultValue="false"
            android:title="@string/item_shifting"
            android:summary="@string/summary_item_shifting" />
        <SwitchPreference
            android:key="only_text"
            android:defaultValue="false"
            android:title="@string/only_text" />
    </PreferenceCategory>
</PreferenceScreen>