<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/notifications_settings">
        <SwitchPreference
            android:key="facebook_messages"
            android:title="@string/facebook_message"
            android:defaultValue="false"/>
        <SwitchPreference
            android:key="facebook_notifications"
            android:title="@string/facebook_notifications"
            android:defaultValue="false"/>
		<ListPreference
            android:title="@string/interval_pref"
            android:summary="@string/interval_pref_description_new"
            android:key="notif_interval"
            android:entries="@array/intervalPrefTitles"
            android:entryValues="@array/intervalPrefValues"
            android:defaultValue="300000" />
        <RingtonePreference
            android:key="ringtone"
            android:dependency="facebook_notifications"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:defaultValue="content://settings/system/notification_sound"
            android:title="@string/notification_sound"
            android:summary="@string/notification_sound_description" />
        <RingtonePreference
            android:key="ringtone_msg"
            android:dependency="facebook_messages"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:defaultValue="content://settings/system/notification_sound"
            android:title="@string/notification_sound_msg"
            android:summary="@string/notification_sound_description" />
        <SwitchPreference
            android:key="vibrate"
            android:title="@string/vibrate"
            android:defaultValue="false"/>
        <SwitchPreference
            android:key="vibrate_double"
            android:title="@string/vibrate_double"
            android:defaultValue="false"/>
        <SwitchPreference
            android:key="led_light"
            android:title="@string/led_light"
            android:defaultValue="false"/>
        <SwitchPreference
            android:key="flashlight_as_led"
            android:title="@string/flashlight_as_led"
            android:summary="@string/flashlight_as_led_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>