<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_top_stories"
            android:icon="@drawable/ic_menu_top_stories"
            android:title="@string/menu_top_stories" />
        <item
            android:id="@+id/nav_most_recent"
            android:icon="@drawable/ic_menu_most_recent"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/menu_most_recent" />
        <item
            android:id="@+id/nav_friendreq"
            android:icon="@drawable/ic_menu_friendreq"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/menu_friendreq" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_mainmenu"
            android:icon="@drawable/ic_menu_mainmenu"
            android:title="@string/menu_mainmenu" />
		<item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_menu_groups"
            android:title="@string/menu_groups" />
		<item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/menu_events" />
		<item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_menu_photos"
            android:title="@string/menu_photos" />
    </group>

    <group android:checkableBehavior="none">
		<item
            android:id="@+id/nav_exitapp"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/ic_menu_exitapp" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
    </group>

</menu>
