<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <include layout="@layout/toolbar" />

    <include layout="@layout/content_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menuFAB"
        android:layout_marginBottom = "50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        fab:menu_colorNormal="?attr/colorPrimary"
        fab:menu_colorPressed="?attr/colorPrimaryDark"
        fab:menu_colorRipple="?attr/colorPrimary"
        fab:menu_icon="@drawable/ic_fab_menu">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/checkinFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_checkin"
            fab:fab_label="@string/fab_checkin"
            fab:fab_colorNormal="?attr/colorPrimary"
            fab:fab_colorPressed="?attr/colorPrimaryDark"
            fab:fab_colorRipple="?attr/colorPrimary"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/photoFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_photo"
            fab:fab_label="@string/fab_photo"
            fab:fab_colorNormal="?attr/colorPrimary"
            fab:fab_colorPressed="?attr/colorPrimaryDark"
            fab:fab_colorRipple="?attr/colorPrimary"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/textFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_text"
            fab:fab_label="@string/fab_text"
            fab:fab_colorNormal="?attr/colorPrimary"
            fab:fab_colorPressed="?attr/colorPrimaryDark"
            fab:fab_colorRipple="?attr/colorPrimary"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/topFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_jump_top"
            fab:fab_label="@string/fab_jump_top"
            fab:fab_colorNormal="?attr/colorPrimary"
            fab:fab_colorPressed="?attr/colorPrimaryDark"
            fab:fab_colorRipple="?attr/colorPrimary"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/shareFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            fab:fab_label="@string/context_share_link"
            fab:fab_colorNormal="?attr/colorPrimary"
            fab:fab_colorPressed="?attr/colorPrimaryDark"
            fab:fab_colorRipple="?attr/colorPrimary"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:elevation="8dp"
            app:itemIconTint="?attr/colorPrimary"
            app:itemTextColor="?attr/colorPrimary"
            app:menu="@menu/bottom_nav_items" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
